--- a/protocols.html
+++ b/protocols.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>protocols </title>
+        <title>protocols</title>
     </head>
     <body>
-        <p>hi world web cool</p>
-        <p>hi there</p>
+VPN...
+
     </body>
 </html>
